APPREQ-395  * fixes QC 153 (hide new image burst on search pages)  * fixes QC 154 (product image alignment issue on view cart when new image burst is shown)  * fixes IE PNG behavior issue (discovered during debugging)
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@3143 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/pc_ie.css
+++ b/projects/Media/docroot/assets/css/pc_ie.css
@@ -2,6 +2,7 @@ td				{ font-size: 10px;  font-family: Verdana, Arial, sans-serif; }
 table           { text-align: left; }
 html            { height: 100%; }
 body			{ font-color: #333333; font-family : Verdana, Arial, sans-serif; font-size : 10px; height: 100%; }
+img{behavior:url(/assets/css/pngbehavior.htc);}
 a:link			{ color : #336600; }
 a:visited		{ color : #336600; }
 a:active		{ color : #FF9900; }
